--- a/env/.env
+++ b/env/.env
@@ -5,30 +5,16 @@ VITE_UNI_APPID = '__UNI__F927A4D'
 VITE_WX_APPID = 'wxa2abb91f64032a2b'
 
 # 主题色
-VITE_PRIMARY_COLOR = '#028d71'
+VITE_PRIMARY_COLOR = '#224DA9'
 
 # h5部署网站的base，配置到 manifest.config.ts 里的 h5.router.base
 VITE_APP_PUBLIC_BASE = /
-# 文件预览地址
-VITE_PREVIEW_BASEURL = 'http://192.168.10.110:8062/api/sys/common/static/qzhf'
 
-# 测试-刘含
-# VITE_SERVER_BASEURL = 'http://192.168.70.140:8062/api'
-# VITE_UPLOAD_BASEURL = 'http://192.168.70.140:8062/api/sys/common/upload'
-#余少强
-# VITE_SERVER_BASEURL = 'http://192.168.70.131:8062/api'
-#尹明
-# VITE_SERVER_BASEURL = 'http://192.168.70.133:8062/api'
-
+VITE_BASE_URL = '/api'
 
 #测试环境
-VITE_SERVER_BASEURL = 'http://192.168.10.110:8062/api'
-VITE_UPLOAD_BASEURL = 'http://192.168.10.110:8062/api/sys/common/upload'
-
-#本地环境
-# VITE_SERVER_BASEURL = 'http://192.168.70.230:8062/api'
-# VITE_UPLOAD_BASEURL = 'http://192.168.70.230:8062/api/sys/common/upload'
-# VITE_PREVIEW_BASEURL = 'http://192.168.70.230:8062/api/sys/common/static/qzhf'
+VITE_SERVER_BASEURL = 'http://192.168.70.68'
+VITE_UPLOAD_BASEURL = ''
 
 
 
