--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "展厅中控系统",
+  "name": "智慧展厅",
   "appid": "__UNI__F927A4D",
   "description": "",
-  "versionName": "1.0.0",
-  "versionCode": "100",
+  "versionName": "0.5.3",
+  "versionCode": "053",
   "transformPx": false,
   "app-plus": {
     "usingComponents": true,
@@ -78,6 +78,7 @@
         }
       }
     },
+    "orientation": "landscape",
     "compatible": {
       "ignoreVersion": true
     }
